[package]
categories.workspace = true
description = "Subprotocols"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "subprotocols"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext.workspace = true
itertools.workspace = true
rand.workspace = true
thiserror.workspace = true
transcript.workspace = true

[dev-dependencies]
goldilocks.workspace = true
