[package]
categories.workspace = true
description = "Sumcheck protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sumcheck"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
cfg-if.workspace = true
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
p3-field.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true

crossbeam-channel.workspace = true
multilinear_extensions = { path = "../multilinear_extensions", features = ["parallel"] }
sumcheck_macro = { path = "../sumcheck_macro" }
transcript = { path = "../transcript" }

[dev-dependencies]
criterion.workspace = true
p3-goldilocks.workspace = true
p3-mds.workspace = true
poseidon.workspace = true

[features]
default = []
ro_query_stats = ["transcript/ro_query_stats"]

[[bench]]
harness = false
name = "devirgo_sumcheck"
