[package]
categories.workspace = true
description = "Sumcheck protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sumcheck"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
p3.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true

crossbeam-channel.workspace = true
multilinear_extensions = { path = "../multilinear_extensions", features = ["parallel"] }
sumcheck_macro = { path = "../sumcheck_macro" }
transcript = { path = "../transcript" }

[dev-dependencies]
criterion.workspace = true
poseidon.workspace = true
rand.workspace = true

[features]
nightly-features = [
  "p3/nightly-features",
  "ff_ext/nightly-features",
  "multilinear_extensions/nightly-features",
  "sumcheck_macro/nightly-features",
  "transcript/nightly-features",
]

[[bench]]
harness = false
name = "devirgo_sumcheck"
