[package]
categories.workspace = true
description = "Sumcheck protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sumcheck"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
either.workspace = true
ff_ext = { git = "https://github.com/scroll-tech/ceno", package = "ff_ext", rev = "5af7c08" }
itertools.workspace = true
multilinear_extensions = { git = "https://github.com/scroll-tech/ceno", package = "multilinear_extensions", features = ["parallel"], rev = "5af7c08" }
p3.workspace = true
rayon.workspace = true
serde.workspace = true
sumcheck_macro = { path = "../sumcheck_macro" }
thiserror.workspace = true
tracing.workspace = true
transcript = { git = "https://github.com/scroll-tech/ceno", package = "transcript", rev = "5af7c08" }

[dev-dependencies]
criterion.workspace = true
p3-goldilocks.workspace = true
poseidon.workspace = true
rand.workspace = true

[features]
nightly-features = [
  "p3/nightly-features",
  "ff_ext/nightly-features",
  "multilinear_extensions/nightly-features",
  "sumcheck_macro/nightly-features",
  "transcript/nightly-features",
]

[[bench]]
harness = false
name = "devirgo_sumcheck"
